# osu-sync-overlay

./: Cargo.toml  README.md
glad-gl2/: Cargo.toml
glad-gl2/src/: gl.rs
glad-gles2/src/: gl.rs
src/: egl_def.rs  lib.rs
src/gl/: gl2_bindings.rs  mod.rs  opengl_renderer.rs
src/gl/shaders/: gl2_frag.glsl  gl2_vert.glsl
src/gles/: egldef.rs  gles2_bindings.rs  gles_renderer.rs  mod.rs
src/gles/shaders/: gl2_frag.glsl  gl2_vert.glsl  gles2_frag.glsl  gles2_vert.glsl
src/gui/: mod.rs  ui.rs  ui_renderer.rs
src/renderer/: gles2_bindings.rs  mod.rs  ui_renderer.rs
src/renderer/api_loader/: api_loader.rs  gl_loader.rs  gles_loader.rs  mod.rs
src/renderer/frame/: egl_frame.rs  frame.rs  mod.rs  wgl_frame.rs
src/renderer/shaders/: ui_frag.glsl  ui_vert.glsl
src/sync/: config.rs  memory_mapping_file.rs  mod.rs
src/utils/: mod.rs
